# magi

./: .gitignore  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
magi/: __main__.py  cli.py  config.py  core.py  doctor.py  intake.py  journal.py  memory.py  personas.py  render.py  repl.py  warmup.py
tests/: test_config.py  test_intake.py  test_journal.py  test_journal_security.py  test_memory.py  test_security.py  test_synthesis.py  test_validators.py
