[project]
name = "magi"
version = "0.4.0"
description = "Three-agent decision system inspired by Evangelion, powered by open-source models via Ollama"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0",
]

[project.scripts]
magi = "magi.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["magi"]
