[project]
name = "magi"
version = "0.12.0"
description = "Three-agent decision council inspired by Evangelion, powered by open-source models via Ollama"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/0arch-io/magi"
Issues = "https://github.com/0arch-io/magi/issues"

[project.scripts]
magi = "magi.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["magi"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
